--- a/core/templates/base.html
+++ b/core/templates/base.html
@@ -55,23 +55,24 @@
         <!-- Collapse -->
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
           <ul class="navbar-nav">
-            <li class="nav-item">
+            <li class="{% if request.resolver_match.view_name == 'website:index' %}active{% endif %}">
               <a class="nav-link active" href="{% url 'website:index' %}">صفحه اصلی</a>
             </li>
 
-            <li class="nav-item">
+            <li class="{% if request.resolver_match.view_name == 'shop:product-grid' %}active{% endif %}">
               <a class="nav-link " href="{% url 'shop:product-grid' %}">لیست محصولات</a>
             </li>
 
-            <li class="nav-item">
+            <li class="{% if request.resolver_match.view_name == 'website:contact' %}active{% endif %}">
               <a class="nav-link " href="{% url 'website:contact' %}">ارتباط با ما</a>
             </li>
 
-            <li class="nav-item">
+            <li class="{% if request.resolver_match.view_name == 'website:about' %}active{% endif %}">
               <a class="nav-link " href="{% url 'website:about' %}">درباره ما</a>
             </li>
+            
 
-            <!-- Pages -->
+            <!-- Pages --> 
             <li class="hs-has-mega-menu nav-item" data-hs-mega-menu-item-options='{
                   "desktop": {
                     "position": "right",
@@ -134,12 +135,18 @@
               <!-- End Search -->
 
               <!-- Shopping Cart -->
-              <button type="button" class="btn btn-ghost-secondary btn-icon" type="button" data-bs-toggle="offcanvas"
+              <!-- <button type="button" class="btn btn-ghost-secondary btn-icon" type="button" data-bs-toggle="offcanvas"
                 data-bs-target="#offcanvasNavbarShoppingCart" aria-controls="offcanvasNavbarShoppingCart">
                 <i class="bi-basket"></i>
                 <span class="cart-item-count ">3</span>
-              </button>
+              </button> -->
+              <a href="{% url 'cart:session_cart_summary' %}" class="btn btn-ghost-secondary btn-icon">
+                <i class="bi-basket"></i>
+                <span class="cart-item-count" id="total-cart-item-count">{{cart.get_total_quantity}}</span>
+              </a>
               <!-- End Shopping Cart -->
+
+
              {% if request.user.is_authenticated %}
              <li class="nav-item dropdown">
               <button class="btn btn-ghost-secondary btn-icon" id="dropdownMenuLink" 
@@ -479,8 +486,9 @@
   <!-- ========== END SECONDARY CONTENTS ========== -->
 
   <!-- JS Implementing Plugins -->
+  <script src= "{% static 'js/jquery-3.7.1.min.js' %}"></script>
   <script src= "{% static 'js/vendor.min.js' %}"></script>
-  <script src= "{% static 'js/jquery.min.js' %}"></script>
+  
 
   <!-- JS Front -->
   <script src= "{% static 'js/theme.min.js' %}"></script>
@@ -587,6 +595,30 @@
       })
     })()
   </script>
+  <script>
+  function addToCart(product_id) {
+     
+            //console.log(product_id)
+            $.ajax({
+                url: "{%  url 'cart:session_product_add' %}",
+                method: 'POST',
+                data: {
+                    product_id: product_id,
+                    csrfmiddlewaretoken: '{{ csrf_token }}'
+        
+                },
+                success: function (response) {
+                    $("#total-cart-item-count").html(response.total_quantity)
+                    console.log(response);
+                    // do something with the response data
+                },
+                error: function (jqXHR, textStatus, errorThrown) {
+                    console.log(errorThrown);
+                    // handle the error case
+                }
+            });
+        }
+</script>
 
   {% block extra_js %}{% endblock extra_js %}
 
