--- a/core/templates/website/index.html
+++ b/core/templates/website/index.html
@@ -299,6 +299,7 @@
     </div>
     <!-- End Card Grid -->
     {% show_latest_products %}
+    <h1>{{cart}}</h1>
     <!-- Card Grid -->
     <div class="container">
       <div class="row">
