--- a/core/templates/dashboard/admin/base.html
+++ b/core/templates/dashboard/admin/base.html
@@ -182,7 +182,32 @@
   <!-- ========== MAIN CONTENT ========== -->
 
 
-<main id="content" role="main">{% block content %}{% endblock content %}</main>
+ <main id="content" role="main" class="bg-light">
+
+    {% block header %}
+    {% endblock %}
+    <!-- Content Section -->
+    <div class="container content-space-1 content-space-t-lg-0 content-space-b-lg-2 mt-lg-n10">
+      <div class="row">
+        <div class="col-lg-3">
+          {% include 'dashboard/admin/sidebar.html' %}
+         
+        </div>
+        <!-- End Col -->
+
+        <div class="col-lg-9">
+          {% block content %}
+          {% endblock %}
+          <!-- Card -->
+          
+          <!-- End Card -->
+        </div>
+        <!-- End Col -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Content Section -->
+  </main>
 
 <footer class="border-top">
     <div class="container">
@@ -381,107 +406,9 @@
     </div>
   </div>
 
-  <!-- Offcanvas Search -->
-  <div class="offcanvas offcanvas-end " tabindex="-1" id="offcanvasNavbarShoppingCart">
-    <div class="offcanvas-header justify-content-between border-0 pb-0 ">
-      <span> 3 کالا</span>
-      <button type="button" class="btn-close text-reset" data-bs-dismiss="offcanvas" aria-label="Close"></button>
-    </div>
 
-    <div class="offcanvas-body">
 
-      <div class="">
-        <!-- Product -->
-        <div class="border-bottom  mb-4">
-          <div class="d-flex">
-            <div class="flex-shrink-0">
-              <div class="avatar avatar-lg ms-3">
-                <img class="avatar-img" src= "{% static 'img/320x320/img2.jpg' %}" alt="Image Description">
-              </div>
-            </div>
-
-            <div class="flex-grow-1">
-              <a class="h5" href="./product-overview.html">کوله پشتی ملی اصل</a>
-
-              <div class="d-grid py-3">
-                <div class="text-body py-1">
-                  <div class="d-flex justify-content-start align-items-center">
-                    <span class="h6">تعداد:</span>
-                    <div class="quantity">
-                      <div class="input-group input-group-sm quantity-selector px-5">
-                        <button type="button" class="btn btn-sm btn-icon btn-outline-primary">
-                          <i class="bi-plus"></i>
-                        </button>
-                        <input type="number" class="form-control" value="2" min="1" max="10">
-                        <button type="button" class="btn btn-sm btn-icon btn-outline-danger">
-                          <i class="bi-dash"></i>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                <div class="text-body py-1">
-                  <div class="d-flex justify-content-start  align-items-center">
-                    <span class="h6">قیمت:</span>
-                    <span class="px-5">150000 تومان</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End Product -->
-        <!-- Product -->
-        <div class="border-bottom  mb-4">
-          <div class="d-flex">
-            <div class="flex-shrink-0">
-              <div class="avatar avatar-lg ms-3">
-                <img class="avatar-img" src= "{% static 'img/320x320/img3.jpg' %}" alt="Image Description">
-              </div>
-            </div>
-
-            <div class="flex-grow-1">
-              <a class="h5" href="./product-overview.html">تیشرت مشکی</a>
-
-              <div class="d-grid py-3">
-                <div class="text-body py-1">
-                  <div class="d-flex justify-content-start align-items-center">
-                    <span class="h6">تعداد:</span>
-                    <div class="quantity">
-                      <div class="input-group input-group-sm quantity-selector px-5">
-                        <button type="button" class="btn btn-sm btn-icon btn-outline-primary">
-                          <i class="bi-plus"></i>
-                        </button>
-                        <input type="number" class="form-control" value="1" min="1" max="10">
-                        <button type="button" class="btn btn-sm btn-icon btn-outline-danger">
-                          <i class="bi-trash"></i>
-                        </button>
-                      </div>
-                    </div>
-                  </div>
-
-                </div>
-                <div class="text-body py-1">
-                  <div class="d-flex justify-content-start  align-items-center">
-                    <span class="h6">قیمت:</span>
-                    <span class="px-5">100000 تومان</span>
-                  </div>
-                </div>
-              </div>
-            </div>
-          </div>
-        </div>
-        <!-- End Product -->
-
-      </div>
-      
-      <div class="d-grid">
-        <p class="text-center">قیمت نهایی: 35000 تومان</p>
-        <a class="btn btn-primary btn-lg" href="/cart.html">سبد خرید</a>
-      </div>
-
-    </div>
+   
   </div>
   <!-- ========== END SECONDARY CONTENTS ========== -->
 
@@ -595,30 +522,6 @@
       })
     })()
   </script>
-  <script>
-  function addToCart(product_id) {
-     
-            //console.log(product_id)
-            $.ajax({
-                url: "{%  url 'cart:session_product_add' %}",
-                method: 'POST',
-                data: {
-                    product_id: product_id,
-                    csrfmiddlewaretoken: '{{ csrf_token }}'
-        
-                },
-                success: function (response) {
-                    $("#total-cart-item-count").html(response.total_quantity)
-                    console.log(response);
-                    // do something with the response data
-                },
-                error: function (jqXHR, textStatus, errorThrown) {
-                    console.log(errorThrown);
-                    // handle the error case
-                }
-            });
-        }
-</script>
 
   {% block extra_js %}{% endblock extra_js %}
 
