--- a/core/templates/dashboard/admin/home.html
+++ b/core/templates/dashboard/admin/home.html
@@ -1,66 +1,70 @@
 {% extends 'dashboard/admin/base.html' %}
 {% load static %}
+
 {% block header %}
-    <!-- Breadcrumb -->
-    <div class="navbar-dark bg-dark" style="
-          background-image: url({% static 'svg/components/wave-pattern-light.svg' %})">
-      <div class="container content-space-1 content-space-b-lg-3">
-        <div class="row align-items-center">
-          <div class="col">
-            <div class="d-none d-lg-block">
-              <h1 class="h2 text-white">داشبورد</h1>
-            </div>
-
-            <!-- Breadcrumb -->
-            <nav aria-label="breadcrumb">
-              <ol class="breadcrumb breadcrumb-light mb-0">
-                <li class="breadcrumb-item">حساب</li>
-                <li class="breadcrumb-item active" aria-current="page">
-                  داشبورد ادمین
-                </li>
-              </ol>
-            </nav>
-            <!-- End Breadcrumb -->
-          </div>
-          <!-- End Col -->
-
-          <div class="col-auto">
-            <!-- Responsive Toggle Button -->
-            <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
-              data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="false"
-              aria-label="Toggle navigation">
-              <span class="navbar-toggler-default">
-                <i class="bi-list"></i>
-              </span>
-              <span class="navbar-toggler-toggled">
-                <i class="bi-x"></i>
-              </span>
-            </button>
-            <!-- End Responsive Toggle Button -->
-          </div>
-          <!-- End Col -->
+<!-- Breadcrumb و هدر اصلی -->
+<div class="navbar-dark bg-dark" style="background-image: url({% static 'svg/components/wave-pattern-light.svg' %})">
+  <div class="container content-space-1 content-space-b-lg-3">
+    <div class="row align-items-center">
+      <div class="col">
+        <div class="d-none d-lg-block">
+          <h1 class="h2 text-white">داشبورد</h1>
         </div>
-        <!-- End Row -->
+
+        <!-- Breadcrumb -->
+        <nav aria-label="breadcrumb">
+          <ol class="breadcrumb breadcrumb-light mb-0">
+            <li class="breadcrumb-item">حساب</li>
+            <li class="breadcrumb-item active" aria-current="page">
+              داشبورد ادمین
+            </li>
+          </ol>
+        </nav>
+        <!-- End Breadcrumb -->
       </div>
+      <!-- End Col -->
+
+      <div class="col-auto">
+        <!-- Responsive Toggle Button -->
+        <button class="navbar-toggler d-lg-none" type="button" data-bs-toggle="collapse"
+          data-bs-target="#sidebarNav" aria-controls="sidebarNav" aria-expanded="false"
+          aria-label="Toggle navigation">
+          <span class="navbar-toggler-default">
+            <i class="bi-list"></i>
+          </span>
+          <span class="navbar-toggler-toggled">
+            <i class="bi-x"></i>
+          </span>
+        </button>
+        <!-- End Responsive Toggle Button -->
+      </div>
+      <!-- End Col -->
     </div>
-    <!-- End Breadcrumb -->
+    <!-- End Row -->
+  </div>
+</div>
 {% endblock %}
+
+{% block header_actions %}
+<!-- اگر بخوای دکمه‌ای در هدر داشبورد باشه میشه اینجا اضافه کرد -->
+<!-- برای مثال: <a class="btn btn-primary" href="#">دکمه نمونه</a> -->
+{% endblock %}
+
 {% block content %}
 <div class="card">
-            <!-- Header -->
-            <div class="card-header border-bottom">
-              <h5 class="card-header-title">خلاصه داشبورد</h5>
-            </div>
-            <!-- End Header -->
+    <!-- Header -->
+    <div class="card-header border-bottom">
+      <h5 class="card-header-title">خلاصه داشبورد</h5>
+    </div>
+    <!-- End Header -->
 
-            <!-- Body -->
-            <div class="card-body">
-              <div class="row">
-
-              </div>
-              <!-- End Row -->
-
-            </div>
-            <!-- End Body -->
-          </div>
+    <!-- Body -->
+    <div class="card-body">
+      <div class="row">
+        <!-- اینجا میتونی بخش‌های خلاصه داشبورد رو اضافه کنی -->
+      </div>
+      <!-- End Row -->
+    </div>
+    <!-- End Body -->
+</div>
 {% endblock %}
