--- a/core/templates/shop/product_grid.html
+++ b/core/templates/shop/product_grid.html
@@ -19,7 +19,7 @@
             <li class="breadcrumb-item">
               <a href="/products-grid.html">محصولات</a>
             </li>
-            <li class="breadcrumb-item active" aria-current="page">توری</li>
+            
           </ol>
         </nav>
       </div>
@@ -181,45 +181,47 @@
       </div>
 
       <!-- Pagination -->
-      {% if page_obj.has_other_pages %}
-        <nav aria-label="Page navigation">
-          <ul class="pagination justify-content-center">
-            {% if page_obj.has_previous %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.previous_page_number }}&{{ request.GET.urlencode }}" aria-label="Previous">
-                  <i class="bi-chevron-double-right small"></i>
-                </a>
-              </li>
-            {% else %}
-              <li class="page-item disabled">
-                <span class="page-link"><i class="bi-chevron-double-right small"></i></span>
-              </li>
-            {% endif %}
+      <!-- Pagination -->
+        {% if page_obj.has_other_pages %}
+        <nav>
+            <ul class="pagination justify-content-center">
 
-            {% for i in page_obj.paginator.page_range %}
-              {% if page_obj.number == i %}
-                <li class="page-item active"><span class="page-link">{{ i }}</span></li>
-              {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
+                {% if page_obj.has_previous %}
                 <li class="page-item">
-                  <a class="page-link" href="?page={{ i }}&{{ request.GET.urlencode }}">{{ i }}</a>
+                    <a class="page-link"
+                       href="?page={{ page_obj.previous_page_number }}{% if querystring %}&{{ querystring }}{% endif %}">
+                        قبلی
+                    </a>
                 </li>
-              {% endif %}
-            {% endfor %}
+                {% endif %}
 
-            {% if page_obj.has_next %}
-              <li class="page-item">
-                <a class="page-link" href="?page={{ page_obj.next_page_number }}&{{ request.GET.urlencode }}" aria-label="Next">
-                  <i class="bi-chevron-double-left small"></i>
-                </a>
-              </li>
-            {% else %}
-              <li class="page-item disabled">
-                <span class="page-link"><i class="bi-chevron-double-left small"></i></span>
-              </li>
-            {% endif %}
-          </ul>
+                {% for i in page_obj.paginator.page_range %}
+                    {% if page_obj.number == i %}
+                        <li class="page-item active">
+                            <span class="page-link">{{ i }}</span>
+                        </li>
+                    {% elif i > page_obj.number|add:'-3' and i < page_obj.number|add:'3' %}
+                        <li class="page-item">
+                            <a class="page-link"
+                               href="?page={{ i }}{% if querystring %}&{{ querystring }}{% endif %}">
+                                {{ i }}
+                            </a>
+                        </li>
+                    {% endif %}
+                {% endfor %}
+
+                {% if page_obj.has_next %}
+                <li class="page-item">
+                    <a class="page-link"
+                       href="?page={{ page_obj.next_page_number }}{% if querystring %}&{{ querystring }}{% endif %}">
+                        بعدی
+                    </a>
+                </li>
+                {% endif %}
+
+            </ul>
         </nav>
-      {% endif %}
+        {% endif %}
     </div>
     <!-- End Product list -->
   </div>
