create order app and price calculate

--- a/core/templates/dashboard/customer/profile/profile-edit.html
+++ b/core/templates/dashboard/customer/profile/profile-edit.html
@@ -5,7 +5,7 @@
 <nav aria-label="breadcrumb">
     <ol class="breadcrumb breadcrumb-light mb-0">
         <li class="breadcrumb-item">حساب</li>
-        <li class="breadcrumb-item"> داشبورد ادمین</li>
+        <li class="breadcrumb-item"> داشبورد کاربر</li>
         <li class="breadcrumb-item active" aria-current="page">
             ویرایش پروفایل
         </li>
